formatting, test cleanup