@@ -1,6 +1,22 @@
 package org.broadinstitute.consent.http.db;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 import com.google.gson.JsonObject;
+import java.sql.Timestamp;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+import java.util.Random;
+import java.util.Set;
+import java.util.stream.IntStream;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 import org.apache.commons.lang3.tuple.Pair;
@@ -20,29 +36,11 @@ import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.dto.DatasetDTO;
 import org.junit.Test;
 
-import java.sql.Timestamp;
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
-import java.util.Random;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-
 public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetByIdWithDacAndConsent() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -60,8 +58,8 @@ public class DatasetDAOTest extends DAOTestHelper {
     @Test
     public void testFindDatasetByIdWithDacAndConsentNotDeletable() {
         User user = createUser();
-        Dataset d1 = createDataset();
-        Dataset d2 = createDataset();
+        Dataset d1 = insertDataset();
+        Dataset d2 = insertDataset();
         Dac dac = createDac();
         // Create a collection that references the created datasets
         createDarCollectionWithDatasets(dac.getDacId(), user, List.of(d1, d2));
@@ -81,7 +79,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetByAlias() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         Dataset foundDataset = datasetDAO.findDatasetByAlias(dataset.getAlias());
 
@@ -91,8 +89,8 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetsByAlias() {
-        Dataset dataset1 = createDataset();
-        Dataset dataset2 = createDataset();
+        Dataset dataset1 = insertDataset();
+        Dataset dataset2 = insertDataset();
 
         List<Dataset> foundDatasets = datasetDAO.findDatasetsByAlias(List.of(dataset1.getAlias(), dataset2.getAlias()));
         List<Integer> foundDatasetIds = foundDatasets.stream().map(Dataset::getDataSetId).toList();
@@ -102,7 +100,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindNeedsApprovalDataSetByDataSetId() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         datasetDAO.updateDatasetNeedsApproval(dataset.getDataSetId(), true);
         Dac dac = createDac();
         Consent consent = createConsent();
@@ -121,7 +119,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetNIHInstitutionalFile() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         // create unrelated file with the same id as dataset id but different category, timestamp before
         createFileStorageObject(
@@ -150,7 +148,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetNIHInstitutionalFile_AlwaysLatestUpdated() throws InterruptedException {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
 
         String fileName = RandomStringUtils.randomAlphabetic(10);
@@ -204,7 +202,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetNIHInstitutionalFile_AlwaysLatestCreated() throws InterruptedException {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         String fileName = RandomStringUtils.randomAlphabetic(10);
         String bucketName = RandomStringUtils.randomAlphabetic(10);
@@ -249,7 +247,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetNIHInstitutionalFile_NotDeleted() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         FileStorageObject nihFile = createFileStorageObject(
                 dataset.getDataSetId().toString(),
@@ -271,7 +269,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetAlternativeDataSharingFile() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         // create unrelated file with the same id as dataset id but different category, timestamp before
         createFileStorageObject(
@@ -300,7 +298,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetAlternativeDataSharingPlanFile_AlwaysLatestCreated() throws InterruptedException {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         String fileName = RandomStringUtils.randomAlphabetic(10);
         String bucketName = RandomStringUtils.randomAlphabetic(10);
@@ -345,7 +343,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testGetAlternativeDataSharingPlanFile_NotDeleted() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
 
         FileStorageObject altFile = createFileStorageObject(
                 dataset.getDataSetId().toString(),
@@ -376,7 +374,7 @@ public class DatasetDAOTest extends DAOTestHelper {
     }
     @Test
     public void testGetDataSetsForObjectIdList() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -393,7 +391,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetsByIdList() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -411,7 +409,7 @@ public class DatasetDAOTest extends DAOTestHelper {
     // User -> UserRoles -> DACs -> Consents -> Consent Associations -> DataSets
     @Test
     public void testFindDataSetsByAuthUserEmail() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -421,19 +419,19 @@ public class DatasetDAOTest extends DAOTestHelper {
 
         List<Dataset> datasets = datasetDAO.findDatasetsByAuthUserEmail(user.getEmail());
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
     }
 
     @Test
     public void testFindNonDACDataSets() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Consent consent = createConsent();
         consentDAO.insertConsentAssociation(consent.getConsentId(), ASSOCIATION_TYPE_TEST, dataset.getDataSetId());
 
         List<Dataset> datasets = datasetDAO.findNonDACDatasets();
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
         // adding this here to ensure mapper does not return a false in place of a null for dacApproval
         datasets.forEach(d -> {
@@ -443,7 +441,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetAndDacIds() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -458,14 +456,14 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindDatasetPropertiesByDatasetId() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Set<DatasetProperty> properties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
         assertEquals(properties.size(), 1);
     }
 
     @Test
     public void testUpdateDataset() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Dac dac = createDac();
         String name = RandomStringUtils.random(20, true, true);
         Timestamp now = new Timestamp(new Date().getTime());
@@ -482,15 +480,15 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testUpdateDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Set<DatasetProperty> properties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
-        DatasetProperty originalProperty = properties.stream().collect(Collectors.toList()).get(0);
+        DatasetProperty originalProperty = properties.stream().toList().get(0);
         DatasetProperty newProperty = new DatasetProperty(d.getDataSetId(), 1, "Updated Value", DatasetPropertyType.String, new Date());
         List<DatasetProperty> updatedProperties = new ArrayList<>();
         updatedProperties.add(newProperty);
         datasetDAO.updateDatasetProperty(d.getDataSetId(), updatedProperties.get(0).getPropertyKey(), updatedProperties.get(0).getPropertyValue().toString());
         Set<DatasetProperty> returnedProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
-        DatasetProperty returnedProperty = returnedProperties.stream().collect(Collectors.toList()).get(0);
+        DatasetProperty returnedProperty = returnedProperties.stream().toList().get(0);
         assertEquals(originalProperty.getPropertyKey(), returnedProperty.getPropertyKey());
         assertEquals(originalProperty.getPropertyId(), returnedProperty.getPropertyId());
         assertNotEquals(originalProperty.getPropertyValue(), returnedProperty.getPropertyValue());
@@ -498,7 +496,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateNumberTypedDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
 
         Set<DatasetProperty> oldProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
         DatasetProperty propertyToDelete = new ArrayList<>(oldProperties).get(0);
@@ -525,7 +523,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateDateTypedDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Instant now = Instant.now();
 
         Set<DatasetProperty> oldProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
@@ -553,7 +551,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateBooleanTypedDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Boolean bool = Boolean.FALSE;
 
         Set<DatasetProperty> oldProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
@@ -581,7 +579,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateJsonTypedDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         JsonObject jsonObject = new JsonObject();
         jsonObject.add("test", new JsonObject());
 
@@ -610,7 +608,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateStringTypedDatasetProperty() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         String value = "hi";
 
         Set<DatasetProperty> oldProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
@@ -638,7 +636,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testCreateTypedDatasetPropertyWithSchema() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         String schemaValue = "test test test test";
 
         Set<DatasetProperty> oldProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
@@ -666,9 +664,9 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testDeleteDatasetPropertyByKey() {
-        Dataset d = createDataset();
+        Dataset d = insertDataset();
         Set<DatasetProperty> properties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
-        DatasetProperty propertyToDelete = properties.stream().collect(Collectors.toList()).get(0);
+        DatasetProperty propertyToDelete = properties.stream().toList().get(0);
         datasetDAO.deleteDatasetPropertyByKey(d.getDataSetId(), propertyToDelete.getPropertyKey());
         Set<DatasetProperty> returnedProperties = datasetDAO.findDatasetPropertiesByDatasetId(d.getDataSetId());
         assertNotEquals(properties.size(), returnedProperties.size());
@@ -676,32 +674,32 @@ public class DatasetDAOTest extends DAOTestHelper {
 
     @Test
     public void testFindAllDatasets() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Consent consent = createConsent();
         consentDAO.insertConsentAssociation(consent.getConsentId(), ASSOCIATION_TYPE_TEST, dataset.getDataSetId());
 
         Set<DatasetDTO> datasets = datasetDAO.findAllDatasetDTOs();
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
     }
 
     @Test
     public void testFindActiveDatasets() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Consent consent = createConsent();
 
         consentDAO.insertConsentAssociation(consent.getConsentId(), ASSOCIATION_TYPE_TEST, dataset.getDataSetId());
 
         Set<DatasetDTO> datasets = datasetDAO.findActiveDatasetDTOs();
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
     }
 
     @Test
     public void testFindDatasetsByUser() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -711,16 +709,16 @@ public class DatasetDAOTest extends DAOTestHelper {
 
         Set<DatasetDTO> datasets = datasetDAO.findDatasetDTOsByUserId(user.getUserId());
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(DatasetDTO::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
     }
 
     @Test
     public void testFindDatasetsByDacIds() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
 
-        Dataset datasetTwo = createDataset();
+        Dataset datasetTwo = insertDataset();
         Dac dacTwo = createDac();
 
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -730,12 +728,26 @@ public class DatasetDAOTest extends DAOTestHelper {
         createConsentAndAssociationWithDatasetId(datasetTwo.getDataSetId());
         List<Integer> datasetIds = List.of(dataset.getDataSetId(), datasetTwo.getDataSetId());
         Set<DatasetDTO> datasets = datasetDAO.findDatasetsByDacIds(List.of(dac.getDacId(), dacTwo.getDacId()));
-        datasets.stream().forEach(d -> assertTrue(datasetIds.contains(d.getDataSetId())));
+        datasets.forEach(d -> assertTrue(datasetIds.contains(d.getDataSetId())));
+    }
+
+
+    @Test
+    public void testUpdateDatasetDataUse() {
+        Dataset dataset = insertDataset();
+        DataUse dataUse = new DataUseBuilder()
+            .setHmbResearch(true)
+            .setDiseaseRestrictions(List.of("DOID_1"))
+            .build();
+
+        datasetDAO.updateDatasetDataUse(dataset.getDataSetId(), dataUse.toString());
+        Dataset updated = datasetDAO.findDatasetById(dataset.getDataSetId());
+        assertEquals(dataUse, updated.getDataUse());
     }
 
     @Test
     public void testFindDatasetWithDataUseByIdList() {
-        Dataset dataset = createDataset();
+        Dataset dataset = insertDataset();
         Dac dac = createDac();
         Consent consent = createConsent();
         datasetDAO.updateDatasetDacId(dataset.getDataSetId(), dac.getDacId());
@@ -743,7 +755,7 @@ public class DatasetDAOTest extends DAOTestHelper {
 
         Set<Dataset> datasets = datasetDAO.findDatasetWithDataUseByIdList(Collections.singletonList(dataset.getDataSetId()));
         assertFalse(datasets.isEmpty());
-        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).collect(Collectors.toList());
+        List<Integer> datasetIds = datasets.stream().map(Dataset::getDataSetId).toList();
         assertTrue(datasetIds.contains(dataset.getDataSetId()));
     }
 
@@ -827,5 +839,16 @@ public class DatasetDAOTest extends DAOTestHelper {
                 createDate
         );
         return fileStorageObjectDAO.findFileById(newFileStorageObjectId);
+    }
+
+    private Dataset insertDataset() {
+        User user = createUser();
+        String name = "Name_" + RandomStringUtils.random(20, true, true);
+        Timestamp now = new Timestamp(new Date().getTime());
+        String objectId = "Object ID_" + RandomStringUtils.random(20, true, true);
+        DataUse dataUse = new DataUseBuilder().setGeneralUse(true).build();
+        Integer id = datasetDAO.insertDataset(name, now, user.getUserId(), objectId, true, dataUse.toString(), null);
+        createDatasetProperties(id);
+        return datasetDAO.findDatasetById(id);
     }
 }
